Archive2/ef/cda5e5302b76d1/output
main.cpp: In function 'void foo(T)':
main.cpp:4:3: error: 'cout' is not a member of 'std'
   std::cout << a;
   ^
main.cpp: At global scope:
main.cpp:8:19: error: 'signal' does not name a type
  using signal_t = signal<void(int)>;
                   ^
main.cpp:10:2: error: 'signal_t' does not name a type
  signal_t<int> sig;
  ^
main.cpp:11:2: error: 'sig' does not name a type
  sig.connect(foo);
  ^
main.cpp:12:5: error: expected constructor, destructor, or type conversion before '(' token
  sig(23123);
     ^
